@@ -359,6 +359,46 @@ L1dCache:4
 L1dCache:4
 L1dCache:5
 
+# Ancestor caches above L1d
+0.0: L2Cache:2
+0.1: L3Cache:0
+0.2: L4Cache:0
+1.0: L2Cache:4
+1.1: L3Cache:1
+1.2: L4Cache:0
+
+# Descendant CPU objects below L4
+0.0: Core:0
+0.1: PU:0
+0.2: PU:1
+0.3: Core:1
+0.4: PU:2
+0.5: PU:3
+0.6: Core:2
+0.7: PU:4
+0.8: PU:5
+0.9: Core:3
+0.10: PU:6
+0.11: PU:7
+1.0: Core:12
+1.1: PU:24
+1.2: PU:25
+1.3: Core:13
+1.4: PU:26
+1.5: PU:27
+1.6: Core:14
+1.7: PU:28
+1.8: PU:29
+1.9: Core:15
+1.10: PU:30
+1.11: PU:31
+
+# Descendant Memory objects below L3
+0.0: NUMANode:2
+0.1: NUMANode:3
+1.0: NUMANode:17
+1.1: NUMANode:18
+
 # Children of L2 and Core of Node, silent
 L1dCache:2
 L1dCache:3
