@@ -33,6 +33,8 @@ Version 2.10.0
 * Tools
   + Add --object-output to hwloc-calc to report the type as a prefix to
     object indexes, e.g. Core:2 instead of 2 in the output of -I.
+  + hwloc-info --ancestor and --descendants now accepts kinds of objects
+    instead of single types.
   + Add --children-of-pid to hwloc-ps to show a hierarchy of processes.
     Thanks to Antoine Morvan for the suggestion.
   + Add --misc-from to lstopo to add Misc objects described in a file.
